--- a/style.css
+++ b/style.css
@@ -17,20 +17,28 @@ body {
   font-size: 1.6rem;
 }
 
+main {
+  max-width: 32rem;
+  margin-inline: auto;
+  padding: 5.6rem 4rem;
+}
+
+img{
+  width: 100%;
+}
+
 h1,
 h2 {
   font-size: 2.8rem;
   font-weight: 700;
+  line-height: 3.6rem;
 }
 
-p {
+p,
+li,
+strong {
   font-size: 1.4rem;
-}
-
-ul,
-ol {
-  font-size: 1.4rem;
-  font-weight: 400;
+  line-height: 1.8rem;
 }
 
 button {
@@ -38,4 +46,7 @@ button {
   background: #a54328;
   color: white;
   border: 0;
+  padding: 12px;
+  border-radius: 0.6rem;
+  margin-top: 1.7rem;
 }
