adjust main box

--- a/style.css
+++ b/style.css
@@ -21,9 +21,10 @@ main {
   max-width: 32rem;
   margin-inline: auto;
   padding: 5.6rem 4rem;
+  box-sizing: content-box;
 }
 
-img{
+img {
   width: 100%;
 }
 
