--- a/style.css
+++ b/style.css
@@ -67,3 +67,19 @@ button {
   border-radius: 0.6rem;
   margin-top: 3.2rem;
 }
+
+@media (min-width: 1120px) {
+  main {
+    flex-direction: row;
+    max-width: fit-content;
+    gap: 16rem;
+  }
+
+  .recipe {
+    max-width: 43.5rem;
+  }
+
+  .ingredients {
+    max-width: 52.5rem;
+  }
+}
