Adjust fonts and finalizing the layout desktop

--- a/style.css
+++ b/style.css
@@ -82,4 +82,23 @@ button {
   .ingredients {
     max-width: 52.5rem;
   }
+
+  h1,
+  h2 {
+    font-size: 4rem;
+    line-height: 5rem;
+  }
+
+  p,
+  li,
+  strong {
+    font-size: 2rem;
+    line-height: 2.4rem;
+  }
+
+  button {
+    padding: 1rem 2rem;
+    font-size: 1.4rem;
+    line-height: 2.4rem;
+  }
 }
